--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>ca.damocles</groupId>
     <artifactId>NicksModInstaller</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>ca.damocles NicksModInstaller</name>
@@ -22,6 +22,11 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>3.12.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -102,7 +107,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>ca.damocles.MasterKt</mainClass>
+                                    <mainClass>ca.damocles.EntryKt</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
